@@ -1,4 +1,4 @@
-$Id: README,v 1.8 2002-11-22 08:13:56 joostvb Exp $
+$Id: README,v 1.9 2003-02-03 15:22:41 joostvb Exp $
 
 caspar - Makefile snippets for common tasks
 
@@ -12,8 +12,9 @@ Caspar offers Makefile snippets for common tasks, like installing stuff you've
 got under version control, or typesetting LaTeX, DocBook XML and DocBook SGML
 documents.
 
-The typesetting functionality is delivered by docbook.mk.  This is not yet
-fully documented.  Some comments on usage are in docbook.mk itself though.
+The typesetting functionality is delivered by docbook.mk and pod.mk.  This is
+not yet fully documented.  Some comments on usage are in docbook.mk and pod.mk
+itself though.
 
 The installing-stuff-under-version-control functionality is delivered by
 caspar.mk.  (That's what the rest of the README will talk about.)  It enables
