@@ -3,3 +3,6 @@ looooong ago.
 
 Francis J. Lacoste, for helping me writing print.dsl and html.dsl.
 
+Tilburg University (http://www.uvt.nl/), for using this software, and giving
+comments.
+
